tmp kc runtime